--- a/superviosr-springboot-redis-mysql/java/src/main/resources/application.yml
+++ b/superviosr-springboot-redis-mysql/java/src/main/resources/application.yml
@@ -4,12 +4,12 @@ server:
     context-path: /
 spring:
   datasource:
-    url: jdbc:mysql://192.168.56.101:13306/ops
+    url: jdbc:mysql://49.234.198.239:3306/maptest
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
   redis:
-    host: 192.168.56.101
+    host: 49.234.198.239
     port: 6379
     timeout: 3000
     #password:
