--- a/superviosr-springboot-redis-mysql/java/src/main/resources/application.yml
+++ b/superviosr-springboot-redis-mysql/java/src/main/resources/application.yml
@@ -4,20 +4,25 @@ server:
     context-path: /
 spring:
   datasource:
-    url: jdbc:mysql://49.234.198.239:3306/maptest
+    url: jdbc:mysql://xx.xxx.xxx.xxx:3307/maptest?characterEncoding=utf-8&useSSL=false
     username: root
-    password: root
+    password: mypassword
     driver-class-name: com.mysql.jdbc.Driver
   redis:
-    host: 49.234.198.239
+    host: xx.xxx.xxx.xxx
     port: 6379
-    timeout: 3000
-    #password:
+    timeout: 30000
+    password: mypassword
+
 #redis查询日志
 logging:
+  config: classpath:log4j2.xml
   level:
-    com:
-      example:
-        redis:
-          dao: debug
+    com.ops.**.mapper: debug
+mybatis:
+  type-aliases-package: com.ops.**.pojo
+  mapper-locations: classpath:mybatis/mapper/ops/**/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
 
